examples/sample-product-chart/chart-test/reports/scenario-ingress-controllers-nginx-ingress-canary-20260601-111750-3/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-01T15:18:54Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "685"
    uid: cfc67243-ceb5-435a-84b1-b4fbf4916edc
  spec:
    clusterIP: 10.96.226.218
    clusterIPs:
    - 10.96.226.218
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-01T15:18:53Z"
    name: sample-canary
    namespace: sample
    resourceVersion: "669"
    uid: 42ec0fa5-a700-4c52-b7ba-40360fd9f340
  spec:
    clusterIP: 10.96.143.164
    clusterIPs:
    - 10.96.143.164
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample-canary
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
